--- a/Projects/Covid Tracker App/index.html
+++ b/Projects/Covid Tracker App/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Assets/css/style.css">
     <title>Corona Tracker App</title>
 </head>
 
@@ -46,7 +46,7 @@
 
     </section>
 
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
